test/cli/test/wildcard_mutate/kyverno-test.yaml
name: wildcard-support-in-matchlabels
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  patchedResource: patchedResource.yaml
  policy: mutate-wildcard
  resources:
  - wildcard-mutate
  result: pass
  rule: mutate-wildcard
- kind: Pod
  patchedResource: patchedResource1.yaml
  policy: mutate-wildcard
  resources:
  - wildcard-mutate-fail
  result: fail
  rule: mutate-wildcard
