test/cli/test/wildcard_mutate/patchedResource.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    test: app
  name: wildcard-mutate
  namespace: default
spec:
  containers:
  - image: nginx:latest
    name: nginx
