test/cli/test/wildcard_mutate/patchedResource1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wildcard-mutate
  namespace: default
spec:
  containers:
  - image: nginx:latest
    name: nginx
