test/cli/test/wildcard_mutate/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-wildcard
spec:
  admission: true
  background: false
  failurePolicy: Ignore
  rules:
  - match:
      all:
      - resources:
          kinds:
          - '*'
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            test: app
    name: mutate-wildcard
