test/cli/test/wildcard_mutate/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wildcard-mutate
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: wildcard-mutate-fail
spec:
  containers:
  - name: nginx
    image: nginx:latest
